Refact 13.12 (#21)
* Dodanie paska menu

* Update IndexContainer.java

Dodanie domyślnych implementacji metod

* Update IndexList.java

Usunięcie implementacji metod, które mają swoje domyślne implementacje

* Update CabinetWorker.java

* Migration to Java 21

Introduced module-info.java to enable Java module system, moved JavaFX Application logic from Main.java to new App.java, and updated pom.xml to use Java 21 and latest JavaFX, ControlsFX, and GitHub API dependencies. This refactor modernizes the project structure, improves maintainability, and prepares the application for future enhancements.

* Update ActNumber.java

* Refactor App update logic and parameter handling

Extracted unnamed parameter check into a helper method and refactored update logic in the start method for clarity. Introduced an overloaded start method to handle update scenarios more cleanly and improved readability by reducing inline logic.

* Create PersonalData.java

* Create IndexNodeInterpreter and implementation

* Refactor Index class

Refactored the Index class to centralize data initialization and attribute interpretation. Introduced a static interpret method for attribute extraction and updated constructors to use this method, improving code clarity and immutability of the data map.

Add create method to Index for data map

Introduces a static create method to the Index class, allowing instantiation from a data map. The method returns null if the map is null or missing the 'an' key, improving safety and convenience when creating Index objects from map data.

Refactor Index.create to simplify validation logic

Removed the separate validate method and integrated its logic into the create method by delegating to another create overload. This streamlines the creation and validation process for Index instances.

* Create DataService.java

* Create BookType.java

* Add IndexFactory interface and implementations

Introduced the IndexFactory interface and two implementations: BasicIndexFacto